Major quality rewrite: 98 files, Mermaid fix, extreme-scenario component
- Fix Mermaid: 68 files div→backtick conversion, subgraph quotes
- Deep rewrite Spring 5: core, mvc, security, boot (teaching style)
- Deep rewrite Kafka, MSA, distributed-tx, system-design (WHY/HOW)
- Deep rewrite Java: JIT, JVM, versions
- Rewrite SpringBoot old posts (4 files)
- Rewrite old Spring posts (filter, IoC, singleton, DI)
- Add extreme-scenario collapsible component (hide + ad + content)
- CSS: extreme scenario orange theme styling

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>